Partially addressed the problem on dasbhoard with the content height that sometimes is lower than the left sidebar menu, overlapping this last the footer, as commented on #101. Total fix to this will addressed on issue #103.

--- a/Styles/Dashboard.css
+++ b/Styles/Dashboard.css
@@ -174,13 +174,19 @@ ul.attributes-list li {
     margin: 0;
     font-size: .9em;
 }
-
 .dashboard #nav {
     left: 0;
     position: absolute;
     top: 362px;
     width: 200px;
     overflow: hidden;
+}
+/* Avoiding left menu sidebar being greater than content */
+.dashboard .tab-body {
+    min-height: 415px;
+}
+.dashboard .tab-body .tab-body {
+    min-height: 390px;
 }
 /*** Profile Menu ***/
 .dashboard #profile-menu li.admin {
